force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/Reference_MMS_Payroll_Documents__c.object-meta.xml
<CustomObject>
    <description>linked to Reference MMS Payroll, shows only documents needed for onboarding</description>
    <label>Reference MMS Payroll Documents</label>
    <nameField>
        <displayFormat>Ref-MMS-Doc-{0000}</displayFormat>
        <label>Reference MMS Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference MMS Payroll Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>