force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>