force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/fields/Discrepancy_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Resolution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>date document discrepancy was resolved</inlineHelpText>
    <label>Discrepancy Resolution Date</label>
    <type>Date</type>
</CustomField>