force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>used with vf page, code populates document name from MMS Onboarding Documents when add doc to MMS reference obj rcd</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>filled in from vf page</inlineHelpText>
    <label>Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>