force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/fields/MMS_Onboarding_Documents__c.field-meta.xml
<CustomField>
    <fullName>MMS_Onboarding_Documents__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MMS Onboarding Documents</label>
    <referenceTo>MMS_Onboarding_Documents__c</referenceTo>
    <relationshipLabel>Reference MMS Payroll Documents</relationshipLabel>
    <relationshipName>Reference_MMS_Payroll_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>