force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/fields/Received_State__c.field-meta.xml
<CustomField>
    <fullName>Received_State__c</fullName>
    <label>Received State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>