force-app/main/default/objects/Reference_MMS_Payroll_Documents__c/fields/Reference_MMS_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Reference_MMS_Payroll__c</fullName>
    <label>Reference MMS Payroll</label>
    <referenceTo>Reference_MMS_Payroll__c</referenceTo>
    <relationshipLabel>Reference MMS Payroll Documents</relationshipLabel>
    <relationshipName>Reference_MMS_Payroll_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>